[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rescaled_pagerank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "awswrangler>=3.13.0",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]